# csc473

./: CMakeLists.txt  README.md
assgt3/: CMakeLists.txt
assgt3/include/: FrameBuffer.h  Ground.h  MayaCamera.hpp  SimpleGLScene.hpp
assgt3/shaders/: ground.fs.glsl  ground.vs.glsl  spline.vs.glsl
assgt3/source/: CMakeLists.txt  Ground.cpp  MayaCamera.cpp  SimpleGL.cpp  SimpleGLScene.cpp  Spline.cpp
cloth/include/: AngularSpring.h  Cloth.h  LinearSpring.h  Mass.h  SimpleGLScene.hpp  SpringDamper.h
cloth/shaders/: cloth.fs.glsl  cloth.vs.glsl
cloth/source/: AngularSpring.cpp  Cloth.cpp  LinearSpring.cpp  Mass.cpp  SimpleGLScene.cpp  SpringDamper.cpp
include/: AngularSpring.h  CMakeLists.txt  IntegrationScene.hpp  LinearSpring.h  Mass.h  SimpleGLScene.hpp
shaders/: CMakeLists.txt  ShaderPaths.hpp.in  angularSpring.fs.glsl  mass.vs.glsl
source/: AngularSpring.cpp  LinearSpring.cpp  Mass.cpp  SimpleGLScene.cpp
termProj/: CMakeCache.txt  CMakeLists.txt
termProj/include/: FrameBuffer.h  Ground.h  MayaCamera.hpp  SimpleGLScene.hpp  Spline.hpp  TextureLoader.h  TextureManager.h
termProj/shaders/: ground.fs.glsl  ground.vs.glsl
termProj/source/: Ground.cpp  MayaCamera.cpp  SimpleGL.cpp  SimpleGLScene.cpp  Spline.cpp
